register, login, settings

--- a/templates/404.html
+++ b/templates/404.html
@@ -3,5 +3,14 @@
 {% block title %}404{% endblock title %}
 
 {% block content %}
-<h2 class="title">404 - Page Not Found</h2>
+<h2 class="title">404</h2>
+<h3 class="title">Page Not Found.</h3>
+<p>Possible reasons: typo in address, resource has been moved/changed name/deleted.</p>
+<div class="utilities">
+    <div class="button-container right">
+        <script type="text/javascript">if(history.length)>1){document.write('<
+        a class="ui green small button" href="javascript:void(0);" onclick="window.history.back()">Move Back</a>')}</script>
+        <a class="ui green small button" href="/">Goto Home Page</a>
+    </div>
+</div>
 {% endblock content%}
