--- a/templates/post.html
+++ b/templates/post.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% import "_macros.html" as macros %}
 
 {% block head %}
     {{ super() }}
@@ -8,6 +9,38 @@
 {% block title %}{{ post.title }}{% endblock title %}
 
 {% block content %}
-<p>{{ post.title }}</p>
-<p>{{ post.abstract_content }}</p>
+    {% set url = post.url() %}
+    {{ macros.card(post) }}
+    <div class="post-tags">
+        {% for tag in post.tags %}
+            <a class="btn btn-default btn-rounded btn-xs" href="{{ tag.url() }}">{{ tag.name }}</a>
+        {% endfor %}
+    </div>
+    <div class="social-share-button text-center" data-title="不改一行代码定位线上性能问题 {{ url }} 分享自 @{{ post.author.name }}" data-type="text" data-url="{{ url }}">
+        <h5>Share to</h5>
+        <a href="javascript:;" class="btn btn-danger" rel="external nofollow" data-site="github" onclick="return SocialShareButton.share(this);"><i class="fa fa-weibo"></i> GitHub</a>
+        <span class="dropdown weixin-qrcode-dropdown">
+            <button class="btn btn-success" id="weixin-qrcode" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-weixin"></i> WeCaht</button>
+            <span class="dropdown-menu weixin-qrcode-dropdown-menu" aria-labelledby="weixin-qrcode" data-url="{{ url }}">
+                <span class="weixin-qrcode" aria-labelledby="weixin-qrcode" data-url="{{ url }}"><canvas width="132" height="132"></canvas></span>
+            </span>
+        </span>
+    </div>
+
+    <div class="post-comment-form">
+        <span>Comment (15)</span>
+        <div class="login-actions">
+            <a class="btn btn-success" href="/signin">Login to comment</a>
+        </div>
+    </div>
+
+    <div id="comments" class="comments">
+        <div class="comment media">
+            <a class="media-left" href="/u/127127"><img src="https://img.toutiao.io/user/695893d4dd314e34a41fea38ef90ae75/thumb" alt="Thumb"></a>
+            <div class="media-body">
+                <h4 class="media-heading">u369511 <small class="date">2018-01-15 10:24</small></h4>
+                <div>Many years ago, saw this on github by a Japanese guy.</div>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
