--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <script src="{{ url_for('static', filename='js/jquery-3.3.1.slim.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='dist/base.js') }}"></script>
     {% endblock head %}
 </head>
 <body>
@@ -19,7 +20,7 @@
                     <a class="nav-link active" href="/explore">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/tags/python">Python</a>
+                    <a class="nav-link" href="/tag/python">Python</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/search">Search</a>
@@ -27,8 +28,8 @@
             </ul>
         </div>
     </header>
-    <div class="container">
-        <div class="main">
+    <div class="main">
+        <div class="container">
             {% block content %}
             {% endblock content %}
         </div>
