--- a/templates/_macros.html
+++ b/templates/_macros.html
@@ -28,7 +28,7 @@
     <div class="user-info">
         <div class="user-avatar">
             <a title="{{ author.name }} - InfoCatcher" href="{{ author.url() }}">
-                <img width="32" alt="{{ author.name }}" src="{ author.avatar_path }}">
+                <img width="32" alt="{{ author.name }}" src="{{ author.avatar_path }}">
             </a>
         </div>
         <div class="info">
