--- a/templates/_macros.html
+++ b/templates/_macros.html
@@ -21,7 +21,7 @@
         </h3>
         <p class="summary"><a href="{{ post.url() }}">{{ post.abstract_content }}</a></p>
         <div class="meta">
-            {{ post.orig_url }}
+            {{ post.netloc }}
             <span>
                 <i class="iconfont InfoCatcher-comment"></i> 0
             </span>
