--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -44,6 +44,9 @@
     right: 0;
     top: 10px;
     text-align: center;
+    &:hover .info {
+        display: block;
+    }
     .user-avatar {
         padding: 10px;
         a {
