--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 <body>
     <header class="navbar">
         <div class="container">
-            <ul class="nav">
+            <ul class="nav {% if request.user %}navbar-right{% endif %}">
                 <li class="nav-item">
                     <a class="nav-link active" href="/explore">Home</a>
                 </li>
@@ -25,6 +25,27 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/search">Search</a>
                 </li>
+                {% if request.user %}
+                <li class="dropdown profile">
+                    <a href="" class="dropdown-toggle clear navbar-profile" data-toggle="dropdown" aria-expanded="true">
+                        <span><img width="25" height="25" src="{{ request.user.avatar_path }}"></span> <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li class="dropdown-item"><a href="{{ url_for('account.user_likes', identifier=request.user.id) }}">My Likes</a></li>
+                        <li class="dropdown-item"><a href="{{ url_for('account.user_collects', identifier=request.user.id) }}">My Collects</a></li>
+                        <li class="dropdown-item"><a href="{{ url_for('account.user_following', identifier=request.user.id) }}">My Follows</a></li>
+                        <li class="dropdown-item"><a href="{{ url_for('account.settings') }}">Settings</a></li>
+                        <li class="dropdown-item"><a href="/logout">Logout</a></li>
+                    </ul>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/register">Register</a>
+                </li>
+                {% endif %}
             </ul>
         </div>
     </header>
