--- a/templates/card.html
+++ b/templates/card.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "_macros.html" as macros %}
 
-{% block title %}Search - Infocatcher{% endblock %}
+{% block title %}Likes & Collects- Infocatcher{% endblock %}
 
 {% block head %}
 {{ super() }}
