--- a/templates/user.html
+++ b/templates/user.html
@@ -22,16 +22,16 @@
     <p><a target="_blank" href="{{ user.website }}">Homepage</a></p>
 
     <p><a class="btn btn-info btn-xs follow-button {% if is_followed %}followed{% endif %}" data-disable-with="Please wait for a moment..." rel="nofollow" data-url="{{ user.url() }}/follow">
-        {% if is_followed %}Already Followed{% else %}Follow{% endif %}
+        {% if is_followed %}Already followed{% else %}Follow{% endif %}
     </a></p>
 
     <div class="bio">{{ user.bio }}</div>
 </div>
 
 <ul class="nav nav-tabs" id="user-tab" role="tablist">
-    {% for name, endpoint_ in (('Following', 'account.user_following'), ('Follower', 'account.user_follower')) %}
+    {% for name, endpoint_ in (('Following', 'account.user_following'), ('Follower', 'account.user_followers')) %}
     <li class="nav-item">
-        <a class="nav-link tag-link {% if endpoint == endpoint_ %}active{% endif %}" id="{{ endpoint_ }}-tab" data-toggle="tab" role="tab">{{ name }}</a>
+        <a class="nav-link tag-link {% if endpoint == endpoint_ %}active{% endif %}" id="{{ endpoint_ }}-tab" data-toggle="tab" data-url="{{ update_url_query(url_for(endpoint_, identifier=identifier), {'page': page}) }}" role="tab">{{ name }}</a>
     </li>
     {% endfor %}
 </ul>
