--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,16 @@
 {% extends "base.html" %}
+{% import "_macros.html" as macros %}
+
+{% block bottomscript %}
+    {{ super() }}
+    <script src="{{ url_for('static', filename='dist/index.js' }}"></script>
+{% endblock %}
+
 
 {% block content %}
-    <p class="title">{{ 'Current User: {}'.format(request.user.name) if request.user else 'Not Logged'}}</p>
+    {% for post in posts.items %}
+    {{ macros.card(post) %}
+    {% endfor %}
+
+    {% macros.render_pagination(posts, 'index.index') %}
 {% endblock %}
