--- a/templates/security/forgot_password.html
+++ b/templates/security/forgot_password.html
@@ -1,6 +1,6 @@
 {% extends "security/base.html" %}
-{% from "security/_macros.html" import render_field_with_errors, render_field, render_submit %}
-{% include "security/_messages.html" %}
+{% from "security/_macros.html" import render_field_with_errors, render_submit %}
+
 
 {% block title %}Recover Password{% endblock %}
 
