--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         <div class="container">
             <ul class="nav {% if request.user %}navbar-right{% endif %}">
                 <li class="nav-item">
-                    <a class="nav-link active" href="/explore">Home</a>
+                    <a class="nav-link active" href="/">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/tag/python">Python</a>
