--- a/templates/security/_macros.html
+++ b/templates/security/_macros.html
@@ -6,7 +6,7 @@
 <div class="form-group {{ 'hide' if hidden else ''}} {{ cls }}">
     <label class="col-sm-4 control-label" for="{{ label_id }}">{{ label_name }}</label>
     <div class="col-sm-4">
-        <input type="text" name="{{ label_id }}" id="{{ label_id }}" class="form-control" autofocus="autofocus" autocomplete="off">
+        <input type="{% if label_id == 'password' %}password{% else %}text{% endif %}" name="{{ label_id }}" id="{{ label_id }}" class="form-control" autofocus="autofocus" autocomplete="off">
     </div>
     {% if field.errors %}
     <p class="control-label is-danger">{{ field.errors[0] }}</p>
@@ -14,10 +14,6 @@
 </div>
 {% endmacro %}
 
-
-{% macro render_field(field) %}
-    <p>{{ field(**kwargs)|safe }}</p>
-{% endmacro %}
 
 {% macro render_submit(text, name='submit') %}
     <div class="form-group">
