--- a/templates/security/register_user.html
+++ b/templates/security/register_user.html
@@ -1,6 +1,6 @@
 {% extends "security/base.html" %}
-{% from "security/_macros.html" import render_field_with_errors, render_field, render_submit %}
-{% include "security/_messages.html" %}
+{% from "security/_macros.html" import render_field_with_errors, render_submit %}
+
 
 {% block title %}Register{% endblock %}
 
@@ -22,8 +22,7 @@
     </form>
     <br>
     <div class="text-center">
-        <a class="btn btn-default" href="/login/douban"><i class="fa fa-weixin"></i> Douban</a>
-        <a class="btn btn-default" href="/login/github"><i class="fa fa-github"></i> GitHub</a>
+        <a class="btn btn-default" href="/login/github"><i class="iconfont InfoCatcher-github"></i> GitHub</a>
     </div>
     <div class="menu">
         <p class="center">
